--- a/src/views/staff/StaffPage.module.css
+++ b/src/views/staff/StaffPage.module.css
@@ -432,7 +432,7 @@
   color: #991b1b;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 768px) {
   .page {
     height: 100%;
   }
